<resources>
    <string name="app_name">Monasabatcom</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot password?</string>
    <string name="have_not_account">Do not have an account? Register here</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="user_name">Full name</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account ? Login here</string>
    <string name="missing_required_data">Please fill missing field</string>
    <string name="edit">Edit</string>
    <string name="no_favourite">Favourite list is empty.</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="language">Language</string>
    <string name="conditions">Terms &amp; Conditions</string>
    <string name="addresses">Addresses</string>
    <string name="appointment">Appointments</string>
    <string name="support">Support</string>
    <string name="arabic">العربية</string>
    <string name="edit_porfile">Edit your profile</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="addressName">Address name</string>
    <string name="phone">Phone number</string>
    <string name="city">Choose your City</string>
    <string name="governorate">Choose your governorate</string>
    <string name="Block">Block</string>
    <string name="building">Building</string>
    <string name="street">Street</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="add_address">Add address</string>
    <string name="add_address_successfully">addresss addeed successfully</string>
    <string name="invalid_name">fullname field is required</string>
    <string name="not_match">password and confirm not match</string>
    <string name="mobile_missing">Fill mobile field</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="change_password_successfully">Password change successfully</string>

    <string name="update">Update</string>
    <string name="update_successfully">Update successfully</string>


    <string name="change">Change</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="my_details">My details</string>
    <string name="notification">Notification</string>
    <string name="forget_Password">Forget Password</string>
    <string name="recreate_password">Recreate password</string>
    <string name="please_enter_email">Please enter email that you are using for registering to get an informations to recreate password</string>
    <string name="send_link">link send to your email to recreate password</string>
    <string name="no_user_email">there is no user use this email to register</string>
    <string name="company_details">Company details</string>
    <string name="appointment_date">Appointment date</string>
    <string name="services">Services</string>
    <string name="back">Back</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="make_appointment">Make appointment</string>
    <string name="error_connection">Check internet connection</string>
    <string name="new_">New</string>
    <string name="login_first">Please login first</string>
    <string name="rating">Rate</string>
    <string name="rating_now">Rating now</string>
    <string name="ok">Ok</string>
    <string name="thanks_rating">Thanks for your rating</string>
    <string name="kd">KD</string>
    <string name="quantity">Count</string>
    <string name="note">Note</string>

    <string name="appointmentDetails">Appointment Details</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="payment_process">Payment process has been successfully completed</string>
    <string name="continueTxt">Continue</string>
    <string name="english">English</string>
    <string name="select_date_time">Please select date and time</string>
    <string name="select_service">Please select sevice</string>
    <string name="appointment_not_avaliable">Appointment not avaliable</string>
    <string name="select_date">Select date :</string>
    <string name="invalid_time">Invalid Time</string>
    <string name="enter_email_password">Please enter email and password</string>
    <string name="user_not_exist">User not exist</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="email_reg_before">Email registered before</string>
    <string name="apply">Apply</string>
    <string name="select_language">Please select language:</string>
    <string name="delete">Delete</string>
    <string name="deleteAddress_success">Address deleted successfully</string>
    <string name="update_address_successfully">Update address successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_occure">Error occurred</string>
    <string name="missing_data">Missing required data</string>
    <string name="not_valide">Not avaliable</string>
    <string name="empty_list">There are no companies.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="working_hours">Working hours:</string>
    <string name="services_and_how_to_serve">Services and how to serve:</string>
    <string name="service_time">Service time:</string>
    <string name="requirements">Requirements:</string>
    <string name="duration_of_stay">Duration of stay:</string>
    <string name="date_and_time">Date and Time</string>
    <string name="extras">Extras</string>
    <string name="extra_notes">Extra notes</string>
    <string name="women_service">Women service</string>
    <string name="service_details">Service details</string>
    <string name="cart">Cart</string>
    <string name="sub_total">Sub total:</string>
    <string name="delivery">Delivery:</string>
    <string name="total_amount">Total amount:</string>
    <string name="where_when">Where/When</string>
    <string name="offer_details">Offer details</string>
    <string name="offers_and_how_to_serve">offers and how to serve :</string>
    <string name="offer_time">Offer time:</string>
    <string name="select_time">Select_time</string>
    <string name="leave_review">Leave a review</string>
    <string name="please_login_to_view_wishlist">Please login to view your favorite list.</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="please_select_date_first">Please select date first</string>
    <string name="pay_on_delivery">Pay on delivery</string>
    <string name="pay_a_deposit">Pay a deposit</string>
    <string name="pay_full_amount_in_advance">Required pay in advance</string>
    <string name="cart_contain_services_from">Cart contain services from another company.Do you with to clear your cart and start a new order here?</string>
    <string name="the_company_cant_deliver_to">The company can\'t deliver to the city of this address</string>
    <string name="cart_is_empty">Cart is empty.</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="knet">Knet</string>
    <string name="amount_to_pay">AMOUNT TO PAY</string>
    <string name="full_amount">Full amount</string>
    <string name="deposit">Deposite</string>
    <string name="total">Total :</string>
    <string name="select_payment_method">Please select payment method</string>
    <string name="select_payment_amount">Please select amount to pay.</string>
    <string name="the_following_services_are_not_available">The following services are not available :</string>
    <string name="the_following_offers_are_not_available">The following offers are not available :</string>
    <string name="your_appointment_has_been_booked">Your appointment has been booked.</string>
    <string name="due_amount">Due amount :</string>
    <string name="all">All</string>
    <string name="order_num">Order number</string>
    <string name="order_from">Order from</string>
    <string name="order_status">Order status</string>
    <string name="price">Price :</string>
    <string name="extra_note">Extra notes:</string>
    <string name="paid_amount">Paid amount</string>
    <string name="should_order_before">Should order before :</string>
    <string name="hour">Hour</string>
    <string name="by_complete_this_order_i">"By complete this order, I agree to terms and condition of "</string>
    <string name="payment_id">Payment ID :</string>
    <string name="result">Result :</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="reference_id">Reference ID :</string>
    <string name="post_data">Post date :</string>
    <string name="amount">Amount :</string>
    <string name="message_payment">Payment process hass been successfully completed.</string>
    <string name="payment_progress_faild">Payment progress failed.</string>
    <string name="the_offer_is_in_cart_select_different_time">The offer is aleady in cart,please select different time.</string>
    <string name="edit_cart">Edit cart</string>
    <string name="are_you_logout">Are you want to logout?</string>

</resources>
