<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_nav"
        android:icon="@drawable/bottom_home_action"
        android:title="@string/home" />

    <item
        android:id="@+id/category_nav"
        android:icon="@drawable/bottom_category_action"
        android:title="@string/category"
        app:showAsAction="always"/>

    <item
        android:id="@+id/product_nav"
        android:icon="@drawable/bottom_offer_action"
        android:title="@string/offers"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favourite_nav"
        android:icon="@drawable/bottom_favorite_action"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account_nav"
        android:icon="@drawable/bottom_profile_action"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>


</menu>