<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddNewAddress">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/add_address"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_alignParentStart="true"
                android:paddingStart="4dp"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_below="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/options"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/addressName"/>
        <EditText
            android:id="@+id/address_name"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="text"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/addressName"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/governorate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp">

            <Spinner
                android:id="@+id/govenorate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/city"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp">

            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/address_phone"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="phone"
            android:padding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/Block"/>

        <EditText
            android:id="@+id/address_block"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="text"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/Block"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/street"/>

        <EditText
            android:id="@+id/address_street"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="text"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/street"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/building"/>

        <EditText
            android:id="@+id/address_building"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="text"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/building"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/floor"/>

        <EditText
            android:id="@+id/address_floor"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="text"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/floor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/apartment"/>
        <EditText
            android:id="@+id/address_apartment"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:inputType="text"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/apartment"/>

    </LinearLayout>

            <Button
                android:layout_below="@+id/options"
                android:id="@+id/save_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/add_address"

                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background ="@drawable/button_style"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>