<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.andr8oid.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            />

        <LinearLayout
            android:id="@+id/login_info"
            android:layout_below="@+id/logo"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email-log"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                />

            <EditText
                android:id="@+id/password_log"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:inputType="textPassword"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/password"/>

        </LinearLayout>

        <Button
            android:layout_below="@+id/login_info"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background ="@drawable/button_style"
            />

        <TextView
            android:layout_below="@+id/btnLogin"
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_Password"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/notRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_not_account"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
           />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>