<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vavisa.monasabatcom.ForgetPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recreate_password"
        android:textColor="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_email"
        android:textColor="@android:color/black"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/email_forget"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:hint="@string/email"/>


    <Button
        android:id="@+id/btnForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/recreate_password"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background ="@drawable/button_style"
        />



</LinearLayout>
